--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,58 @@
             <span class="item__label">Trash</span>
         </div>
     </div>
+
+    <div class="group">
+        <div class="item item--headline">
+            <span class="item__label">Mail</span>
+        </div>
+        <div class="item item--active">
+            <span class="material-symbols-outlined item__icon"> inbox </span>
+            <span class="item__label">Inbox</span>
+            <span class="item__count">100+</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> send </span>
+            <span class="item__label">Outbox</span>
+            <span class="item__count">100+</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> favorite </span>
+            <span class="item__label">Favorites</span>
+            <span class="item__count">15</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> delete  </span>
+            <span class="item__label">Trash</span>
+        </div>
+    </div>
+
+    <div class="group">
+        <div class="item item--headline">
+            <span class="item__label">Mail</span>
+        </div>
+        <div class="item item--active">
+            <span class="material-symbols-outlined item__icon"> inbox </span>
+            <span class="item__label">Inbox</span>
+            <span class="item__count">100+</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> send </span>
+            <span class="item__label">Outbox</span>
+            <span class="item__count">100+</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> favorite </span>
+            <span class="item__label">Favorites</span>
+            <span class="item__count">15</span>
+        </div>
+        <div class="item">
+            <span class="material-symbols-outlined item__icon"> delete  </span>
+            <span class="item__label">Trash</span>
+        </div>
+    </div>
 </menu>
+
 
 <!--    <p>Файл создан плагином html-webpack-plugin</p>-->
 <!--    1233 ввв-->
